source/sass/modules/_taxi.scss
.taxi {
    @include p();
    line-height: 1;
}
.taxi__cats {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    white-space: nowrap;
    overflow: auto;
}
.taxi__cat {
    position: relative;

    &:after {
        content: "";
        height: 1px;
        position: absolute;
        left: 0;
        bottom: -5px;
        background-color: $spot;
        display: none;
        right: 3px;
    }

    &.is-active {
        color: $spot;

        &:after {
            display: block;
        }
    }
}
.taxi__label + .taxi__cat {
    margin-left: 20px;
}
.taxi__cat + .taxi__cat {
    margin-left: 40px;
}

